# ns-engine-api

./: LICENSE  README.md  makefile  pyproject.toml
src/ns_engine_api/: actuator.py  main.py  router.py
src/ns_engine_api/algorithms/tov_solver/: main.py
src/ns_engine_api/domain/: algorithm.py  request.py
src/ns_engine_api/routers/: routes.py
tests/: smoketest.sh
