[tool.poetry]
name = "ns-engine-api"
version = "0.1.0"
description = ""
authors = ["Rodrigo de Souza <rsouza01@gmail.com>"]
readme = "README.md"
packages = [{include = "ns_engine_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
